Panther/AnalyzerTree/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> initial
Rule 1     initial -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> consoleLog
Rule 5     instruction -> declaration
Rule 6     instruction -> function
Rule 7     instruction -> callFuncSt
Rule 8     instruction -> assignment
Rule 9     instruction -> whileSt
Rule 10    instruction -> ifSt
Rule 11    empty -> <empty>
Rule 12    whileSt -> RWHILE PARIZQ exp PARDER block
Rule 13    ifSt -> RIF PARIZQ exp PARDER block elseSt
Rule 14    elseSt -> RELSE block
Rule 15    elseSt -> ifSt
Rule 16    elseSt -> empty
Rule 17    consoleLog -> CONSOLE PUNTO LOG PARIZQ exp PARDER PTCOMA
Rule 18    declaration -> LET ID DOSPT typeDef decArray IGUAL exp PTCOMA
Rule 19    decArray -> CORIZQ CORDER
Rule 20    decArray -> empty
Rule 21    function -> FUNCTION ID parametersFunc DOSPT typeDef block
Rule 22    parametersFunc -> PARIZQ parameters PARDER
Rule 23    parametersFunc -> PARIZQ PARDER
Rule 24    parameters -> parameters COMA parameter
Rule 25    parameters -> parameter
Rule 26    parameter -> ID DOSPT typeDef
Rule 27    block -> LLAVEIZQ instructions LLAVEDER
Rule 28    block -> LLAVEIZQ LLAVEDER
Rule 29    callFuncSt -> ID parametersCallFunc PTCOMA
Rule 30    parametersCallFunc -> PARIZQ listValues PARDER
Rule 31    parametersCallFunc -> PARIZQ PARDER
Rule 32    assignment -> ID IGUAL exp PTCOMA
Rule 33    listValues -> listValues COMA exp
Rule 34    listValues -> exp
Rule 35    typeDef -> RSTRING
Rule 36    typeDef -> RINT
Rule 37    typeDef -> RFLOAT
Rule 38    exp -> exp MAS exp
Rule 39    exp -> exp MENOS exp
Rule 40    exp -> exp MULTIPLICACION exp
Rule 41    exp -> exp DIVISION exp
Rule 42    exp -> exp MAYOR exp
Rule 43    exp -> exp MENOR exp
Rule 44    exp -> exp IGUALQUE exp
Rule 45    exp -> PARIZQ exp PARDER
Rule 46    exp -> CORIZQ listValues CORDER
Rule 47    exp -> ENTERO
Rule 48    exp -> DECIMAL
Rule 49    exp -> STRING
Rule 50    exp -> ID
Rule 51    exp -> ID listArray
Rule 52    listArray -> listArray CORIZQ exp CORDER
Rule 53    listArray -> CORIZQ exp CORDER

Terminals, with rules where they appear

COMA                 : 24 33
CONSOLE              : 17
CORDER               : 19 46 52 53
CORIZQ               : 19 46 52 53
DECIMAL              : 48
DIVISION             : 41
DOSPT                : 18 21 26
ENTERO               : 47
FUNCTION             : 21
ID                   : 18 21 26 29 32 50 51
IGUAL                : 18 32
IGUALQUE             : 44
LET                  : 18
LLAVEDER             : 27 28
LLAVEIZQ             : 27 28
LOG                  : 17
MAS                  : 38
MAYOR                : 42
MENOR                : 43
MENOS                : 39
MULTIPLICACION       : 40
PARDER               : 12 13 17 22 23 30 31 45
PARIZQ               : 12 13 17 22 23 30 31 45
PTCOMA               : 17 18 29 32
PUNTO                : 17
RELSE                : 14
RFLOAT               : 37
RIF                  : 13
RINT                 : 36
RSTRING              : 35
RWHILE               : 12
STRING               : 49
error                : 

Nonterminals, with rules where they appear

assignment           : 8
block                : 12 13 14 21
callFuncSt           : 7
consoleLog           : 4
decArray             : 18
declaration          : 5
elseSt               : 13
empty                : 16 20
exp                  : 12 13 17 18 32 33 34 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 52 53
function             : 6
ifSt                 : 10 15
initial              : 0
instruction          : 2 3
instructions         : 1 2 27
listArray            : 51 52
listValues           : 30 33 46
parameter            : 24 25
parameters           : 22 24
parametersCallFunc   : 29
parametersFunc       : 21
typeDef              : 18 21 26
whileSt              : 9

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . consoleLog
    (5) instruction -> . declaration
    (6) instruction -> . function
    (7) instruction -> . callFuncSt
    (8) instruction -> . assignment
    (9) instruction -> . whileSt
    (10) instruction -> . ifSt
    (17) consoleLog -> . CONSOLE PUNTO LOG PARIZQ exp PARDER PTCOMA
    (18) declaration -> . LET ID DOSPT typeDef decArray IGUAL exp PTCOMA
    (21) function -> . FUNCTION ID parametersFunc DOSPT typeDef block
    (29) callFuncSt -> . ID parametersCallFunc PTCOMA
    (32) assignment -> . ID IGUAL exp PTCOMA
    (12) whileSt -> . RWHILE PARIZQ exp PARDER block
    (13) ifSt -> . RIF PARIZQ exp PARDER block elseSt

    CONSOLE         shift and go to state 11
    LET             shift and go to state 12
    FUNCTION        shift and go to state 14
    ID              shift and go to state 13
    RWHILE          shift and go to state 15
    RIF             shift and go to state 16

    initial                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    consoleLog                     shift and go to state 4
    declaration                    shift and go to state 5
    function                       shift and go to state 6
    callFuncSt                     shift and go to state 7
    assignment                     shift and go to state 8
    whileSt                        shift and go to state 9
    ifSt                           shift and go to state 10

state 1

    (0) S' -> initial .



state 2

    (1) initial -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . consoleLog
    (5) instruction -> . declaration
    (6) instruction -> . function
    (7) instruction -> . callFuncSt
    (8) instruction -> . assignment
    (9) instruction -> . whileSt
    (10) instruction -> . ifSt
    (17) consoleLog -> . CONSOLE PUNTO LOG PARIZQ exp PARDER PTCOMA
    (18) declaration -> . LET ID DOSPT typeDef decArray IGUAL exp PTCOMA
    (21) function -> . FUNCTION ID parametersFunc DOSPT typeDef block
    (29) callFuncSt -> . ID parametersCallFunc PTCOMA
    (32) assignment -> . ID IGUAL exp PTCOMA
    (12) whileSt -> . RWHILE PARIZQ exp PARDER block
    (13) ifSt -> . RIF PARIZQ exp PARDER block elseSt

    $end            reduce using rule 1 (initial -> instructions .)
    CONSOLE         shift and go to state 11
    LET             shift and go to state 12
    FUNCTION        shift and go to state 14
    ID              shift and go to state 13
    RWHILE          shift and go to state 15
    RIF             shift and go to state 16

    instruction                    shift and go to state 17
    consoleLog                     shift and go to state 4
    declaration                    shift and go to state 5
    function                       shift and go to state 6
    callFuncSt                     shift and go to state 7
    assignment                     shift and go to state 8
    whileSt                        shift and go to state 9
    ifSt                           shift and go to state 10

state 3

    (3) instructions -> instruction .

    CONSOLE         reduce using rule 3 (instructions -> instruction .)
    LET             reduce using rule 3 (instructions -> instruction .)
    FUNCTION        reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    RWHILE          reduce using rule 3 (instructions -> instruction .)
    RIF             reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    LLAVEDER        reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> consoleLog .

    CONSOLE         reduce using rule 4 (instruction -> consoleLog .)
    LET             reduce using rule 4 (instruction -> consoleLog .)
    FUNCTION        reduce using rule 4 (instruction -> consoleLog .)
    ID              reduce using rule 4 (instruction -> consoleLog .)
    RWHILE          reduce using rule 4 (instruction -> consoleLog .)
    RIF             reduce using rule 4 (instruction -> consoleLog .)
    $end            reduce using rule 4 (instruction -> consoleLog .)
    LLAVEDER        reduce using rule 4 (instruction -> consoleLog .)


state 5

    (5) instruction -> declaration .

    CONSOLE         reduce using rule 5 (instruction -> declaration .)
    LET             reduce using rule 5 (instruction -> declaration .)
    FUNCTION        reduce using rule 5 (instruction -> declaration .)
    ID              reduce using rule 5 (instruction -> declaration .)
    RWHILE          reduce using rule 5 (instruction -> declaration .)
    RIF             reduce using rule 5 (instruction -> declaration .)
    $end            reduce using rule 5 (instruction -> declaration .)
    LLAVEDER        reduce using rule 5 (instruction -> declaration .)


state 6

    (6) instruction -> function .

    CONSOLE         reduce using rule 6 (instruction -> function .)
    LET             reduce using rule 6 (instruction -> function .)
    FUNCTION        reduce using rule 6 (instruction -> function .)
    ID              reduce using rule 6 (instruction -> function .)
    RWHILE          reduce using rule 6 (instruction -> function .)
    RIF             reduce using rule 6 (instruction -> function .)
    $end            reduce using rule 6 (instruction -> function .)
    LLAVEDER        reduce using rule 6 (instruction -> function .)


state 7

    (7) instruction -> callFuncSt .

    CONSOLE         reduce using rule 7 (instruction -> callFuncSt .)
    LET             reduce using rule 7 (instruction -> callFuncSt .)
    FUNCTION        reduce using rule 7 (instruction -> callFuncSt .)
    ID              reduce using rule 7 (instruction -> callFuncSt .)
    RWHILE          reduce using rule 7 (instruction -> callFuncSt .)
    RIF             reduce using rule 7 (instruction -> callFuncSt .)
    $end            reduce using rule 7 (instruction -> callFuncSt .)
    LLAVEDER        reduce using rule 7 (instruction -> callFuncSt .)


state 8

    (8) instruction -> assignment .

    CONSOLE         reduce using rule 8 (instruction -> assignment .)
    LET             reduce using rule 8 (instruction -> assignment .)
    FUNCTION        reduce using rule 8 (instruction -> assignment .)
    ID              reduce using rule 8 (instruction -> assignment .)
    RWHILE          reduce using rule 8 (instruction -> assignment .)
    RIF             reduce using rule 8 (instruction -> assignment .)
    $end            reduce using rule 8 (instruction -> assignment .)
    LLAVEDER        reduce using rule 8 (instruction -> assignment .)


state 9

    (9) instruction -> whileSt .

    CONSOLE         reduce using rule 9 (instruction -> whileSt .)
    LET             reduce using rule 9 (instruction -> whileSt .)
    FUNCTION        reduce using rule 9 (instruction -> whileSt .)
    ID              reduce using rule 9 (instruction -> whileSt .)
    RWHILE          reduce using rule 9 (instruction -> whileSt .)
    RIF             reduce using rule 9 (instruction -> whileSt .)
    $end            reduce using rule 9 (instruction -> whileSt .)
    LLAVEDER        reduce using rule 9 (instruction -> whileSt .)


state 10

    (10) instruction -> ifSt .

    CONSOLE         reduce using rule 10 (instruction -> ifSt .)
    LET             reduce using rule 10 (instruction -> ifSt .)
    FUNCTION        reduce using rule 10 (instruction -> ifSt .)
    ID              reduce using rule 10 (instruction -> ifSt .)
    RWHILE          reduce using rule 10 (instruction -> ifSt .)
    RIF             reduce using rule 10 (instruction -> ifSt .)
    $end            reduce using rule 10 (instruction -> ifSt .)
    LLAVEDER        reduce using rule 10 (instruction -> ifSt .)


state 11

    (17) consoleLog -> CONSOLE . PUNTO LOG PARIZQ exp PARDER PTCOMA

    PUNTO           shift and go to state 18


state 12

    (18) declaration -> LET . ID DOSPT typeDef decArray IGUAL exp PTCOMA

    ID              shift and go to state 19


state 13

    (29) callFuncSt -> ID . parametersCallFunc PTCOMA
    (32) assignment -> ID . IGUAL exp PTCOMA
    (30) parametersCallFunc -> . PARIZQ listValues PARDER
    (31) parametersCallFunc -> . PARIZQ PARDER

    IGUAL           shift and go to state 21
    PARIZQ          shift and go to state 22

    parametersCallFunc             shift and go to state 20

state 14

    (21) function -> FUNCTION . ID parametersFunc DOSPT typeDef block

    ID              shift and go to state 23


state 15

    (12) whileSt -> RWHILE . PARIZQ exp PARDER block

    PARIZQ          shift and go to state 24


state 16

    (13) ifSt -> RIF . PARIZQ exp PARDER block elseSt

    PARIZQ          shift and go to state 25


state 17

    (2) instructions -> instructions instruction .

    CONSOLE         reduce using rule 2 (instructions -> instructions instruction .)
    LET             reduce using rule 2 (instructions -> instructions instruction .)
    FUNCTION        reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    RWHILE          reduce using rule 2 (instructions -> instructions instruction .)
    RIF             reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    LLAVEDER        reduce using rule 2 (instructions -> instructions instruction .)


state 18

    (17) consoleLog -> CONSOLE PUNTO . LOG PARIZQ exp PARDER PTCOMA

    LOG             shift and go to state 26


state 19

    (18) declaration -> LET ID . DOSPT typeDef decArray IGUAL exp PTCOMA

    DOSPT           shift and go to state 27


state 20

    (29) callFuncSt -> ID parametersCallFunc . PTCOMA

    PTCOMA          shift and go to state 28


state 21

    (32) assignment -> ID IGUAL . exp PTCOMA
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp MAYOR exp
    (43) exp -> . exp MENOR exp
    (44) exp -> . exp IGUALQUE exp
    (45) exp -> . PARIZQ exp PARDER
    (46) exp -> . CORIZQ listValues CORDER
    (47) exp -> . ENTERO
    (48) exp -> . DECIMAL
    (49) exp -> . STRING
    (50) exp -> . ID
    (51) exp -> . ID listArray

    PARIZQ          shift and go to state 31
    CORIZQ          shift and go to state 32
    ENTERO          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    ID              shift and go to state 29

    exp                            shift and go to state 30

state 22

    (30) parametersCallFunc -> PARIZQ . listValues PARDER
    (31) parametersCallFunc -> PARIZQ . PARDER
    (33) listValues -> . listValues COMA exp
    (34) listValues -> . exp
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp MAYOR exp
    (43) exp -> . exp MENOR exp
    (44) exp -> . exp IGUALQUE exp
    (45) exp -> . PARIZQ exp PARDER
    (46) exp -> . CORIZQ listValues CORDER
    (47) exp -> . ENTERO
    (48) exp -> . DECIMAL
    (49) exp -> . STRING
    (50) exp -> . ID
    (51) exp -> . ID listArray

    PARDER          shift and go to state 37
    PARIZQ          shift and go to state 31
    CORIZQ          shift and go to state 32
    ENTERO          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    ID              shift and go to state 29

    listValues                     shift and go to state 36
    exp                            shift and go to state 38

state 23

    (21) function -> FUNCTION ID . parametersFunc DOSPT typeDef block
    (22) parametersFunc -> . PARIZQ parameters PARDER
    (23) parametersFunc -> . PARIZQ PARDER

    PARIZQ          shift and go to state 40

    parametersFunc                 shift and go to state 39

state 24

    (12) whileSt -> RWHILE PARIZQ . exp PARDER block
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp MAYOR exp
    (43) exp -> . exp MENOR exp
    (44) exp -> . exp IGUALQUE exp
    (45) exp -> . PARIZQ exp PARDER
    (46) exp -> . CORIZQ listValues CORDER
    (47) exp -> . ENTERO
    (48) exp -> . DECIMAL
    (49) exp -> . STRING
    (50) exp -> . ID
    (51) exp -> . ID listArray

    PARIZQ          shift and go to state 31
    CORIZQ          shift and go to state 32
    ENTERO          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    ID              shift and go to state 29

    exp                            shift and go to state 41

state 25

    (13) ifSt -> RIF PARIZQ . exp PARDER block elseSt
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp MAYOR exp
    (43) exp -> . exp MENOR exp
    (44) exp -> . exp IGUALQUE exp
    (45) exp -> . PARIZQ exp PARDER
    (46) exp -> . CORIZQ listValues CORDER
    (47) exp -> . ENTERO
    (48) exp -> . DECIMAL
    (49) exp -> . STRING
    (50) exp -> . ID
    (51) exp -> . ID listArray

    PARIZQ          shift and go to state 31
    CORIZQ          shift and go to state 32
    ENTERO          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    ID              shift and go to state 29

    exp                            shift and go to state 42

state 26

    (17) consoleLog -> CONSOLE PUNTO LOG . PARIZQ exp PARDER PTCOMA

    PARIZQ          shift and go to state 43


state 27

    (18) declaration -> LET ID DOSPT . typeDef decArray IGUAL exp PTCOMA
    (35) typeDef -> . RSTRING
    (36) typeDef -> . RINT
    (37) typeDef -> . RFLOAT

    RSTRING         shift and go to state 45
    RINT            shift and go to state 46
    RFLOAT          shift and go to state 47

    typeDef                        shift and go to state 44

state 28

    (29) callFuncSt -> ID parametersCallFunc PTCOMA .

    CONSOLE         reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    LET             reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    FUNCTION        reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    ID              reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    RWHILE          reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    RIF             reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    $end            reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)
    LLAVEDER        reduce using rule 29 (callFuncSt -> ID parametersCallFunc PTCOMA .)


state 29

    (50) exp -> ID .
    (51) exp -> ID . listArray
    (52) listArray -> . listArray CORIZQ exp CORDER
    (53) listArray -> . CORIZQ exp CORDER

    PTCOMA          reduce using rule 50 (exp -> ID .)
    MAS             reduce using rule 50 (exp -> ID .)
    MENOS           reduce using rule 50 (exp -> ID .)
    MULTIPLICACION  reduce using rule 50 (exp -> ID .)
    DIVISION        reduce using rule 50 (exp -> ID .)
    MAYOR           reduce using rule 50 (exp -> ID .)
    MENOR           reduce using rule 50 (exp -> ID .)
    IGUALQUE        reduce using rule 50 (exp -> ID .)
    PARDER          reduce using rule 50 (exp -> ID .)
    COMA            reduce using rule 50 (exp -> ID .)
    CORDER          reduce using rule 50 (exp -> ID .)
    CORIZQ          shift and go to state 49

    listArray                      shift and go to state 48

state 30

    (32) assignment -> ID IGUAL exp . PTCOMA
    (38) exp -> exp . MAS exp
    (39) exp -> exp . MENOS exp
    (40) exp -> exp . MULTIPLICACION exp
    (41) exp -> exp . DIVISION exp
    (42) exp -> exp . MAYOR exp
    (43) exp -> exp . MENOR exp
    (44) exp -> exp . IGUALQUE exp

    PTCOMA          shift and go to state 50
    MAS             shift and go to state 51
    MENOS           shift and go to state 52
    MULTIPLICACION  shift and go to state 53
    DIVISION        shift and go to state 54
    MAYOR           shift and go to state 55
    MENOR           shift and go to state 56
    IGUALQUE        shift and go to state 57


state 31

    (45) exp -> PARIZQ . exp PARDER
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp MAYOR exp
    (43) exp -> . exp MENOR exp
    (44) exp -> . exp IGUALQUE exp
    (45) exp -> . PARIZQ exp PARDER
    (46) exp -> . CORIZQ listValues CORDER
    (47) exp -> . ENTERO
    (48) exp -> . DECIMAL
    (49) exp -> . STRING
    (50) exp -> . ID
    (51) exp -> . ID listArray

    PARIZQ          shift and go to state 31
    CORIZQ          shift and go to state 32
    ENTERO          shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    ID              shift and go to state 29

    exp                            shift and go to state 58

state 32
